Added custom endpoint names
